--- a/lunch/static/style.css
+++ b/lunch/static/style.css
@@ -1,4 +1,4 @@
-.container ul li a{
+.container ul li a {
     width: 100%;
     text-align: left;
     margin-bottom: 15px;
@@ -6,4 +6,8 @@
 
 .well {
     margin-bottom: 5px;
+}
+
+.datepick, .datepic {
+    width: 100%;
 }
